--- a/notebooks/ConvertDCM_to_NII.ipynb
+++ b/notebooks/ConvertDCM_to_NII.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,7 @@
     "from platipy.imaging import ImageVisualiser\n",
     "from platipy.imaging.tests.data import download_and_extract_zip_file\n",
     "from platipy.dicom.io.rtstruct_to_nifti import convert_rtstruct\n",
+    "from platipy.dicom.io.nifti_to_rtstruct import convert_nifti\n",
     "from rt_utils import RTStructBuilder\n",
     "import os\n",
     "\n",
@@ -110,6 +111,17 @@
     "            out_file = os.path.join(out_dir_img, f'image_{index}.nii.gz')\n",
     "            sitk.WriteImage(image_data, str(out_file))\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert .nii files into rtstruct.dcm\n",
+    "\n",
+    "convert_nifti(dcm_path=, mask_input=)"
    ]
   }
  ],
